logs/validate.20260407-234333.log
Mode: isolate
Isolate: including Chap06 Chap05 Chap02
error: unexpected token, expected `;`
   --> src/Chap06/LabDirGraphMtEph.rs:532:77
    |
532 |                         left_neighbors@.union(right_neighbors@).contains(w) by {
    |                                                                             ^^

error[E0425]: cannot find type `LabDirGraphMtEph` in this scope
   --> src/Chap06/LabDirGraphMtEph.rs:963:62
    |
963 |     impl<V: StTInMtT + Hash, L: StTInMtT + Hash> Display for LabDirGraphMtEph<V, L> {
    |                                                              ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LabDirGraphMtEph` in this scope
   --> src/Chap06/LabDirGraphMtEph.rs:969:60
    |
969 |     impl<V: StTInMtT + Hash, L: StTInMtT + Hash> Debug for LabDirGraphMtEph<V, L> {
    |                                                            ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LabDirGraphMtEphIter` in this scope
   --> src/Chap06/LabDirGraphMtEph.rs:979:54
    |
979 |     impl<'a, V: StTInMtT + Hash + 'static> Debug for LabDirGraphMtEphIter<'a, V> {
    |                                                      ^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LabDirGraphMtEphIter` in this scope
   --> src/Chap06/LabDirGraphMtEph.rs:983:56
    |
983 |     impl<'a, V: StTInMtT + Hash + 'static> Display for LabDirGraphMtEphIter<'a, V> {
    |                                                        ^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LabDirGraphMtEphGhostIterator` in this scope
   --> src/Chap06/LabDirGraphMtEph.rs:987:54
    |
987 |     impl<'a, V: StTInMtT + Hash + 'static> Debug for LabDirGraphMtEphGhostIterator<'a, V> {
    |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LabDirGraphMtEphGhostIterator` in this scope
   --> src/Chap06/LabDirGraphMtEph.rs:991:56
    |
991 |     impl<'a, V: StTInMtT + Hash + 'static> Display for LabDirGraphMtEphGhostIterator<'a, V> {
    |                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LabDirGraphMtEphInv` in this scope
   --> src/Chap06/LabDirGraphMtEph.rs:997:20
    |
997 |     impl Debug for LabDirGraphMtEphInv {
    |                    ^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LabDirGraphMtEphInv` in this scope
    --> src/Chap06/LabDirGraphMtEph.rs:1001:22
     |
1001 |     impl Display for LabDirGraphMtEphInv {
     |                      ^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LockedLabDirGraphMtEph` in this scope
    --> src/Chap06/LabDirGraphMtEph.rs:1007:80
     |
1007 |     impl<V: StTInMtT + Hash + 'static, L: StTInMtT + Hash + 'static> Debug for LockedLabDirGraphMtEph<V, L> {
     |                                                                                ^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LockedLabDirGraphMtEph` in this scope
    --> src/Chap06/LabDirGraphMtEph.rs:1011:82
     |
1011 |     impl<V: StTInMtT + Hash + 'static, L: StTInMtT + Hash + 'static> Display for LockedLabDirGraphMtEph<V, L> {
     |                                                                                  ^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 4s
Sampled Memory Usage: peak rust_verify RSS: 2979MB, peak z3 RSS: 331MB, min free: 22270MB
Sampled CPU Usage: rust_verify: 62s, z3 children: 66s
